--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -67,10 +67,10 @@
 
 
     <section id="flag-section">
-        <h2>Submit Flags here:</h2>
+        <h2>Flag Submission:</h2>
         <!-- Flag submission form -->
         <form action="/submit-flag" id="flag-form" method="post">
-            <label for="flag"></label><input type="text" id="flag" name="flag" placeholder="Enter your flag here:">
+            <label for="flag"></label><input type="text" id="flag" name="flag" placeholder="saint{EXAMPLE_FLAG}">
             <input type="submit" value="Submit Flag">
 
             <!-- Response message area -->
