--- a/templates/rules.html
+++ b/templates/rules.html
@@ -26,13 +26,15 @@
             <h2></h2>
             <ol>
                 <li>The flag format is saint{FLAG_FORMAT}</li>
-                <li>Please don't just share flags with your friends, tell them how you got the flag in the first place.</li>
+                <li>Please do not just share flags and solutions when asked. If your friends are stuck then walk through
+                    the process without revealing the solution directly.</li>
                 <li>If you are stuck, consult Mr Mackenzie (or me).</li>
                 <li>Please don't attack the infrastructure (i.e. Ning's computer), that would make him sad.</li>
-                <li>Please DO NOT DDoS the website.</li>
+                <li>PLEASE DO NOT DDOS THE WEBSITE.</li>
                 <li>Scanning and brute force tools are not required to solve a challenge unless explicitly stated so.</li>
-                <li>This is a game, please have fun.</li>
-                <li>The winners do get (weak) bragging rights though.</li>
+                <li>All complaints about the rules here will be redirected to /dev/null for further consideration.</li>
+                <li>This is a game, <strong>please have fun.</strong></li>
+                <li>The winners ARE better than everyone else though.</li>
             </ol>
         </article>
 
