--- a/templates/index.html
+++ b/templates/index.html
@@ -26,6 +26,7 @@
         <p>If you already know what a CTF is, then => <a href="/challenges">challenges section</a></p>
 
         <p>For everyone else,</p>
+        <p>INSERT CTF EXPLANATION HERE</p>
     </section>
 </body>
 </html>
