--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,11 @@
     <title>Login</title>
 </head>
 <body>
-    <h1>Login</h1>
+<h1>Login</h1>
+<form action="/login" method="POST">
+    <input type="text" name="username" placeholder="Username:" required="required"> <br>
+    <input type="text" name="password" placeholder="Password:" required="required">
+    <input type="submit" value="Log in">
+</form>
 </body>
 </html>
