--- a/templates/register.html
+++ b/templates/register.html
@@ -6,5 +6,10 @@
 </head>
 <body>
     <h1>Register</h1>
+    <form action="/register" method="POST">
+        <input type="text" name="username" placeholder="Username:" required="required"> <br>
+        <input type="text" name="password" placeholder="Password:" required="required">
+        <input type="submit" value="Sign up">
+    </form>
 </body>
 </html>
