--- a/templates/rules.html
+++ b/templates/rules.html
@@ -16,6 +16,8 @@
                 <li><a href="/">Home</a></li>
                 <li><a href="/rules">Rules</a></li>
                 <li><a href="/challenges">Challenges</a></li>
+                <li><a href="/login">Login</a></li>
+                <li><a href="/register">Register</a></li>
             </ul>
         </nav>
     </header>
