--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -63,13 +63,13 @@
 </head>
 <body>
     <header id="main-header">
-        <h1>Wow! Look at those challenges</h1>
+        <h1>SaintCTF</h1>
 
         <nav id="main-nav">
             <ul>
                 <li><a href="/">Home</a></li>
                 <li><a href="/rules">Rules</a></li>
-                <li><a href="/challenges">Challenges</a></li>
+                <li><a class="navbar-selected" href="/challenges">Challenges</a></li>
                 <li><a href="/login">Login</a></li>
                 <li><a href="/register">Register</a></li>
             </ul>
