--- a/templates/index.html
+++ b/templates/index.html
@@ -9,11 +9,11 @@
 </head>
 <body>
     <header id="main-header">
-        <h1>Home</h1>
+        <h1>SaintCTF</h1>
 
         <nav id="main-nav">
             <ul>
-                <li><a href="/">Home</a></li>
+                <li><a class="navbar-selected" href="/">Home</a></li>
                 <li><a href="/rules">Rules</a></li>
                 <li><a href="/challenges">Challenges</a></li>
                 <li><a href="/login">Login</a></li>
@@ -24,7 +24,6 @@
 
     <section id="home-section">
         <h1>Welcome to SaintCTF</h1>
-        <p>Hello peoples</p>
         <p>If you already know what a CTF is, then => <a href="/challenges">challenges section</a></p>
 
         <p>For everyone else,</p>
