--- a/templates/rules.html
+++ b/templates/rules.html
@@ -9,12 +9,12 @@
 </head>
 <body>
     <header id="main-header">
-        <h1>Rules</h1>
+        <h1>SaintCTF</h1>
 
         <nav id="main-nav">
             <ul>
                 <li><a href="/">Home</a></li>
-                <li><a href="/rules">Rules</a></li>
+                <li><a class="navbar-selected" href="/rules">Rules</a></li>
                 <li><a href="/challenges">Challenges</a></li>
                 <li><a href="/login">Login</a></li>
                 <li><a href="/register">Register</a></li>
