--- a/static/nav.css
+++ b/static/nav.css
@@ -1,7 +1,6 @@
 /* Navigation Bar Styling */
 #main-nav {
     background-color: #222222;
-    color: #fff;
     padding: 10px 20px;
     text-align: center;
 
@@ -18,12 +17,21 @@
     margin-right: 10px;
 }
 
+/* General styles for links in the navbar */
 #main-nav ul li a {
     color: white;
     text-decoration: none;
     font-weight: bold;
 }
 
+/* Styles for links on hover in the navbar */
 #main-nav ul li a:hover {
     text-decoration: underline;
 }
+
+/* Highlight navbar selected item with increased specificity */
+#main-nav ul li a.navbar-selected {
+    color: #964ae2;
+}
+
+
