Restyle login and signup pages.

--- a/templates/index.html
+++ b/templates/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='nav.css') }}">
 </head>
-<body>
+<body style="background-color: #121212;">
     <header id="main-header">
         <h1>SaintCTF</h1>
 
@@ -17,7 +17,7 @@
                 <li><a href="/rules">Rules</a></li>
                 <li><a href="/challenges">Challenges</a></li>
                 <li><a href="/login">Login</a></li>
-                <li><a href="/register">Register</a></li>
+                <li><a href="/register">Sign Up</a></li>
             </ul>
         </nav>
     </header>
