--- a/static/styles.css
+++ b/static/styles.css
@@ -92,6 +92,74 @@ body {
     margin: 0 auto;  /* Center the element */
 }
 
+/* Login form styling */
+/* styles.css */
+#login-form {
+    width: 400px; /* Width adjusted for a larger form */
+    margin: 80px auto; /* Increased vertical margin for more central focus */
+    padding: 40px; /* Increased padding for a spacious interior */
+    border: 2px solid #333; /* Darker border for a subtle and elegant look */
+    border-radius: 10px; /* Smoothed rounded corners */
+    background-color: #1e1e1e; /* Dark background */
+    box-shadow: 0 0 20px rgba(0, 0, 0, 0.9); /* Enhanced shadow for a deeper 3D effect */
+}
+
+#login-form h1 {
+    text-align: center;
+    color: #964ae2; /* Purple accent for the title */
+    font-size: 24px; /* Larger font size for visibility */
+    margin-bottom: 30px; /* More space below the header */
+}
+
+#login-form form {
+    display: flex;
+    flex-direction: column;
+}
+
+#login-form input[type="text"],
+#login-form input[type="password"] {
+    padding: 15px; /* Comfortable padding */
+    margin-bottom: 15px; /* Adequate spacing between fields */
+    border: 1px solid #333; /* Darker border to match the outer border */
+    background-color: #121212; /* Consistent dark theme for input fields */
+    color: #ccc; /* Lighter text for readability */
+    border-radius: 5px; /* Soft rounded corners for the inputs */
+    font-size: 16px; /* Increased font size for ease of reading */
+}
+
+#login-form input[type="submit"] {
+    padding: 15px; /* Generous padding for a substantial button */
+    color: white;
+    background-color: #964ae2; /* Purple accent color */
+    border: none;
+    border-radius: 5px; /* Consistent radius with other elements */
+    cursor: pointer;
+    transition: background-color 0.3s;
+    font-size: 16px; /* Larger text for a bold statement */
+}
+
+#login-form input[type="submit"]:hover {
+    background-color: #7329c4; /* Darker purple on hover for visual feedback */
+}
+
+#login-form p {
+    color: #ccc; /* Light grey color for readability against the dark background */
+    font-size: 14px; /* Slightly smaller font size for less emphasis compared to input fields */
+    text-align: center; /* Center-align text for consistency with the form's alignment */
+    margin-top: 20px; /* Spacing above the paragraph to separate it from the form */
+}
+
+#login-form a {
+    color: #964ae2; /* Purple color for the link to match the accent color */
+    text-decoration: none; /* No underline to keep it clean and modern */
+}
+
+#login-form a:hover {
+    color: #7329c4; /* Darker purple on hover for visual feedback */
+    text-decoration: underline; /* Underline on hover to indicate it's clickable */
+}
+
+
 /* Flag Submission Form Styling */
 #flag-form {
     display: flex;
@@ -146,7 +214,7 @@ body {
 
 /* Rules */
 #rules-section {
-    text-align: center;
+    text-align: left;
     padding: 20px;
     margin-top: 20px;
     background-color: #1e1e1e;
@@ -198,7 +266,4 @@ ol li:before {
     margin-right: 10px; /* Space between the number and text */
 }
 
-body {
-    /*background-image: url("/static/images/miku.png")*/
-}
 
