--- a/templates/challenges.html
+++ b/templates/challenges.html
@@ -61,7 +61,7 @@
         });
     </script>
 </head>
-<body>
+<body style="background-color: #121212;">
     <header id="main-header">
         <h1>SaintCTF</h1>
 
@@ -71,7 +71,7 @@
                 <li><a href="/rules">Rules</a></li>
                 <li><a class="navbar-selected" href="/challenges">Challenges</a></li>
                 <li><a href="/login">Login</a></li>
-                <li><a href="/register">Register</a></li>
+                <li><a href="/register">Sign Up</a></li>
             </ul>
         </nav>
     </header>
