--- a/templates/login.html
+++ b/templates/login.html
@@ -6,7 +6,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='nav.css') }}">
 </head>
-<body>
+<body style="background-color: #121212;">
     <header id="main-header">
         <h1>SaintCTF</h1>
 
@@ -16,15 +16,18 @@
                 <li><a href="/rules">Rules</a></li>
                 <li><a href="/challenges">Challenges</a></li>
                 <li><a class="navbar-selected" href="/login">Login</a></li>
-                <li><a href="/register">Register</a></li>
+                <li><a href="/register">Sign Up</a></li>
             </ul>
         </nav>
     </header>
-    <h1>Login</h1>
-    <form action="/login" method="POST">
-        <input type="text" name="username" placeholder="Username:" required="required"> <br>
-        <input type="password" name="password" placeholder="Password:" required="required">
-        <input type="submit" value="Log in">
-    </form>
+    <section id="login-form">
+        <h1>Login</h1>
+        <form action="/login" method="POST">
+            <input type="text" name="username" placeholder="Username:" required="required"> <br>
+            <input type="password" name="password" placeholder="Password:" required="required">
+            <input type="submit" value="Log in">
+        </form>
+        <p>No account? Sign up <a href="/register">here</a></p>
+    </section>
 </body>
 </html>
