--- a/templates/rules.html
+++ b/templates/rules.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='nav.css') }}">
 </head>
-<body>
+<body style="background-color: #121212;">
     <header id="main-header">
         <h1>SaintCTF</h1>
 
@@ -17,26 +17,26 @@
                 <li><a class="navbar-selected" href="/rules">Rules</a></li>
                 <li><a href="/challenges">Challenges</a></li>
                 <li><a href="/login">Login</a></li>
-                <li><a href="/register">Register</a></li>
+                <li><a href="/register">Sign Up</a></li>
             </ul>
         </nav>
     </header>
 
     <section id="rules-section">
-        <h1>Da Rules</h1>
+        <h1>Rulez</h1>
         <article class="rules">
             <h2></h2>
             <ol>
-                <li>The flag format is saint{FLAG_FORMAT}</li>
-                <li>Please do not just share flags and solutions when asked. If your friends are stuck then walk through
-                    the process without revealing the solution directly.</li>
-                <li>If you are stuck, consult Mr Mackenzie (or me).</li>
                 <li>Please don't attack the infrastructure (i.e. Ning's computer), that would make him sad.</li>
-                <li>PLEASE DO NOT DDOS THE WEBSITE.</li>
+                <li>DO NOT DDOS THE WEBSITE.</li>
                 <li>Scanning and brute force tools are not required to solve a challenge unless explicitly stated so.</li>
-                <li>All complaints about the rules here will be redirected to /dev/null for further consideration.</li>
+                <li>If you are stuck, consult Mr Mackenzie (or me).</li>
+                <li>Please do not just share flags and solutions when asked.</li>
+                <li>If your friends are stuck, you should help them without giving away all the answers (and all the fun)</li>
+                <li>The flag format is saint{FLAG_FORMAT}</li>
                 <li>This is a game, <strong>please have fun.</strong></li>
                 <li>The winners ARE better than everyone else though.</li>
+                <li>All complaints about the rules here will be redirected to /dev/null for further consideration.</li>
             </ol>
         </article>
 
