--- a/templates/login.html
+++ b/templates/login.html
@@ -5,6 +5,13 @@
     <title>Login | SaintCTF</title>
     <link rel="stylesheet" href="{{ url_for('static', filename='styles.css') }}">
     <link rel="stylesheet" href="{{ url_for('static', filename='nav.css') }}">
+
+       <!-- Sweet alert -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/@sweetalert2/theme-dark@5/dark.css" />
+    <script src="https://cdn.jsdelivr.net/npm/sweetalert2@11/dist/sweetalert2.min.js"></script>    <!-- as lazy as normal alerts, better than you could make them yourself -->
+
+    <!-- Jquery 3.6.0 -->
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.6.0/jquery.min.js"></script>
 </head>
 <body style="background-color: #121212;">
     <header id="main-header">
@@ -20,14 +27,50 @@
             </ul>
         </nav>
     </header>
-    <section id="login-form">
+    <section id="login-section">
         <h1>Login</h1>
-        <form action="/login" method="POST">
+        <form id="login-form" action="/login" method="POST">
             <input type="text" name="username" placeholder="Username:" required="required"> <br>
             <input type="password" name="password" placeholder="Password:" required="required">
             <input type="submit" value="Log in">
         </form>
         <p>No account? Sign up <a href="/register">here</a></p>
     </section>
+
+    <script>
+    $(document).ready(function() {
+        $('#login-form').submit(function(e) {
+            e.preventDefault();  // Prevent default form submission
+
+            const formData = $(this).serialize();  // Serialize form data
+
+            $.ajax({
+                type: 'POST',
+                url: '/login',
+                data: formData,
+                success: function(response) {
+                    if (response.status === 'success') {
+                        // On successful login we go straight to challenges
+                        window.location.href = '/challenges'
+                    } else if (response.status === 'error') {
+                        Swal.fire({
+                            title: "Login Failed!",
+                            text: response.message,
+                            icon: "error"
+                        });
+                    }
+                },
+                error: function(xhr, status, error) {
+                    // Handler if AJAX itself fails (network issues, etc.)
+                    Swal.fire({
+                        title: "Error",
+                        text: "Something went wrong: " + error,
+                        icon: "error"
+                    });
+                }
+            });
+        });
+    });
+    </script>
 </body>
 </html>
