--- a/templates/rules.html
+++ b/templates/rules.html
@@ -30,7 +30,7 @@
                 <li>Please don't attack the infrastructure (i.e. Ning's computer), that would make him sad.</li>
                 <li>DO NOT DDOS THE WEBSITE.</li>
                 <li>Scanning and brute force tools are not required to solve a challenge unless explicitly stated so.</li>
-                <li>If you are stuck, consult Mr Mackenzie (or me).</li>
+                <li>If you are stuck, I hereby give you permission to annoy Andrew about it.</li>
                 <li>Please do not just share flags and solutions when asked.</li>
                 <li>If your friends are stuck, you should help them without giving away all the answers (and all the fun)</li>
                 <li>The flag format is saint{FLAG_FORMAT}</li>
